Bug 121232 - Specials characters in the right and left column aren't properly centred inside the boxes
Summary: Specials characters in the right and left column aren't properly centred insi...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-11-07 09:39 UTC by Telesto
Modified: 2018-11-20 13:27 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (332.67 KB, image/png)
2018-11-07 11:42 UTC, Telesto
Details
How it looks on linux gtk3 (58.91 KB, image/png)
2018-11-13 14:35 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2018-11-07 09:39:25 UTC
Description:
MacOS: Specials characters in the right and left column aren't properly centred inside the boxes 

Steps to Reproduce:
1. Open Writer
2. Open the special character dialog
3. Look at the left and right column of the listing of special characters. the boxes a slightly larger, and the items not in the center

Actual Results:
Items not centered

Expected Results:
Should be


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 6.2.0.0.alpha0+
Build ID: 76bf3939b0583212a56c317c85aea110f8ac6fee
CPU threads: 4; OS: Mac OS X 10.12.6; UI render: default; 
TinderBox: MacOSX-x86_64@49-TDF, Branch:master, Time: 2018-07-27_06:01:47
Locale: nl-NL (nl_NL.UTF-8); Calc: group threaded
Comment 1 Xisco Faulí 2018-11-07 09:53:08 UTC
I can't reproduce it in

Version: 6.2.0.0.alpha0+
Build ID: 7fe40724b7b07710a501710466b6f10b526c2c97
CPU threads: 8; OS: Mac OS X 10.13.6; UI render: default; 
Locale: en-US (en_ES.UTF-8); Calc: threaded

Could you please share a screenshot?
Comment 2 Telesto 2018-11-07 11:42:26 UTC
Created attachment 146386 [details]
Screenshot

Left and right column of the special character dialog is slightly larger. And the DZ position isn't optimal
Comment 3 Alex Thurgood 2018-11-07 12:18:18 UTC
Confirming with 

Version: 6.2.0.0.alpha1+
Build ID: 740b99783b5480fcd1e5fce7c1beb5967d015041
CPU threads: 8; OS: Mac OS X 10.14; UI render: default; VCL: osx; 
Locale: fr-FR (fr_FR.UTF-8); Calc: threaded

There is more white space on the left hand side of the leftmost column, and similarly on the right hand side of the rightmost column.
Comment 4 Xisco Faulí 2018-11-13 14:35:07 UTC
Created attachment 146594 [details]
How it looks on linux gtk3

Also happening on Linux
Comment 5 Xisco Faulí 2018-11-13 14:36:09 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=374599f8c26713905a310673d2b429083321186a

author	Caolán McNamara <caolanm@redhat.com>	2018-03-22 13:41:50 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2018-03-30 14:32:12 +0200
commit 374599f8c26713905a310673d2b429083321186a (patch)
tree 2ee4be182670b2ca9396a5f42d4122bed806a3ba
parent 2d3a5e81e9730c1190f8592f85f5b99b6d4587ef (diff)
weld SvxCharacterMap dialog

Bisected with: bibisect-linux64-6.1

Adding Cc: to Caolán McNamara
Comment 6 Caolán McNamara 2018-11-19 14:20:03 UTC
What size the drawing area ends up is affected by the size of the various widgets in the dialog along with its own size request (which is columns * 4 times the average digit width of the ui font). If the size is such that it cannot be divided by the number of columns evenly there are spare pixels left over. We split the extra space in half and draw the left and right columns wider to use up those pixels. If the text is centered in the left/right columns, that will look just as "wrong" as the current look IMO.

Here's what I'll do, I'll widen the size request of the drawing area to 5.25 the average digit width, that will possibly provide more space for the "DZ" example. I'll round the size request up so that it will divide evenly without pixels left over.
Comment 7 Commit Notification 2018-11-19 15:50:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/9e7bf5d38588adaddb371e4daed318e1b24ccc05%5E%21

tdf#121232 set a size request that will result in a 0 m_nXGap by default

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Caolán McNamara 2018-11-19 15:52:12 UTC
backported to just 6-2.
Comment 9 Commit Notification 2018-11-19 21:06:49 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/c763002727049752879dd81daf6ee59a8a9d0da9%5E%21

tdf#121232 set a size request that will result in a 0 m_nXGap by default

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Xisco Faulí 2018-11-20 13:27:04 UTC
Verified in

Version: 6.2.0.0.beta1+
Build ID: c13f4d0a2ff503cdebbc789e1711f90e7b5fe379
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Caolán, Thanks for fixing this!!