tdf#121232 set a size request that will result in a 0 m_nXGap by default

Change-Id: I25ce389bd46beff2dd9b0507581736f2f9511383
Reviewed-on: https://gerrit.libreoffice.org/63574
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>